// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BodyWithMeta when route is a redirect route 1`] = `
<Component
  className="body"
>
  <body
    className="body"
    lang="en"
  >
    <div>
      static page
    </div>
    <ClientCssHash>
      <style>
        body{ width:100%; height: 100%; }
      </style>
    </ClientCssHash>
  </body>
</Component>
`;

exports[`BodyWithMeta when route is a static route 1`] = `
<Component
  className="body"
>
  <body
    className="body"
    lang="en"
  >
    <div>
      static page
    </div>
    <ClientCssHash>
      <style>
        body{ width:100%; height: 100%; }
      </style>
    </ClientCssHash>
    <script
      dangerouslySetInnerHTML={
        Object {
          "__html": "
    window.__routeInfo = {'routeDate':'here'};",
        }
      }
      type="text/javascript"
    />
    <script
      defer={true}
      key="[object Object]"
      src="undefined[object Object]"
      type="text/javascript"
    />
    <script
      defer={true}
      key="[object Object]"
      src="undefined[object Object]"
      type="text/javascript"
    />
  </body>
</Component>
`;
